--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -57,7 +57,7 @@
                         <div class="btt-button shadow-sm rounded-0 border border-black">
                             <a class="btt-link d-flex h-100">
                                 <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-                            </a>	
+                            </a>    
                         </div>
                     </div>
                     <div class="table-responsive rounded d-none d-md-block">
@@ -120,31 +120,34 @@
 {% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript">
-    $('.btt-link').click(function(e) {
-        window.scrollTo(0,0)
-    })
+    $(document).ready(function() {
+        // Scroll to top button
+        $('.btt-link').click(function(e) {
+            window.scrollTo(0, 0);
+        });
+
+        // Update quantity on click
+        $('.update-link').click(function(e) {
+            e.preventDefault();
+            var form = $(this).prev('.update-form');
+            form.submit();
+        });
+
+        // Remove item and reload on click
+        $('.remove-item').click(function(e) {
+            e.preventDefault();
+            var csrfToken = "{{ csrf_token }}";
+            var itemId = $(this).data('item_id');
+            var size = $(this).data('product_size');
+            var url = `/bag/remove/${itemId}/`;
+            var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
+
+            $.post(url, data)
+             .done(function() {
+                 location.reload();
+             });
+        });
+    });
 </script>
 {% include 'products/includes/quantity_input_script.html' %}
-
-<script type="text/javascript">
-    // Update quantity on click
-    $('.update-link').click(function(e) {
-        var form = $(this).prev('.update-form');
-        form.submit();
-    })
-
-    // Remove item and reload on click
-    $('.remove-item').click(function(e) {
-        var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('product_size');
-        var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
-
-        $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
-    })
-</script>
 {% endblock %}
