--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,20 +1,22 @@
 <script type="text/javascript">
-
     // Disable +/- buttons outside 1-99 range
     function handleEnableDisable(itemId) {
-        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
-        var minusDisabled = currentValue < 2;
-        var plusDisabled = currentValue > 98;
-        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
-        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+        var $qtyInputs = $(`.qty_input[data-item_id='${itemId}']`);
+        $qtyInputs.each(function() {
+            var currentValue = parseInt($(this).val());
+            var minusDisabled = currentValue < 2;
+            var plusDisabled = currentValue > 98;
+            $(this).closest('.input-group').find('.decrement-qty').prop('disabled', minusDisabled);
+            $(this).closest('.input-group').find('.increment-qty').prop('disabled', plusDisabled);
+        });
     }
 
     // Ensure proper enabling/disabling of all inputs on page load
     var allQtyInputs = $('.qty_input');
-    for(var i = 0; i < allQtyInputs.length; i++){
-        var itemId = $(allQtyInputs[i]).data('item_id');
+    allQtyInputs.each(function() {
+        var itemId = $(this).data('item_id');
         handleEnableDisable(itemId);
-    }
+    });
 
     // Check enable/disable every time the input is changed
     $('.qty_input').change(function() {
@@ -24,21 +26,17 @@
 
     // Increment quantity
     $('.increment-qty').click(function(e) {
-       e.preventDefault();
-       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-       var currentValue = parseInt($(closestInput).val());
-       $(closestInput).val(currentValue + 1);
-       var itemId = $(this).data('item_id');
-       handleEnableDisable(itemId);
+        e.preventDefault();
+        var $closestInput = $(this).closest('.input-group').find('.qty_input');
+        var currentValue = parseInt($closestInput.val());
+        $closestInput.val(currentValue + 1).change();
     });
 
     // Decrement quantity
     $('.decrement-qty').click(function(e) {
-       e.preventDefault();
-       var closestInput = $(this).closest('.input-group').find('.qty_input')[0];
-       var currentValue = parseInt($(closestInput).val());
-       $(closestInput).val(currentValue - 1);
-       var itemId = $(this).data('item_id');
-       handleEnableDisable(itemId);
+        e.preventDefault();
+        var $closestInput = $(this).closest('.input-group').find('.qty_input');
+        var currentValue = parseInt($closestInput.val());
+        $closestInput.val(currentValue - 1).change();
     });
 </script>
